--- a/style-faq.css
+++ b/style-faq.css
@@ -15,6 +15,7 @@
   body{
     background-image: linear-gradient(to bottom, #ffffff, #f2f2f2);
     background-attachment: fixed;
+    background-size: cover;
   }
 
   header{
