--- a/style-faq.css
+++ b/style-faq.css
@@ -28,7 +28,7 @@
     transition: 0.3s;
   }
 
-  a:hover {
+    li > a:hover {
     background-color: #ffffff;
     color: #000000;
     padding: 18px;
